style.css
@font-face {
  font-family: Chibold;
  src: url("./fonts/CHIBOLD\ demo.ttf");
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

p {
  font-family: sans-serif;
}

nav {
  display: flex;
  position: sticky;
  top: 0;

  background-color: white;
  width: 100%;
}

nav > a > img {
  width: 6rem;
  padding: 1rem;
}

nav > a > p {
  font-family: Chibold;
  font-size: 3rem;
  color: #707070;
  padding: 1rem;
}

.hero {
  background-color: #ffd82a;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 70vh;
  padding-top: 8rem;
}

.hero-text {
  font-family: Chibold;
  font-size: 5rem;
  color: white;
  padding-bottom: 0.5rem;
}

.bigger-text {
  font-size: 150px;
}

button {
  background-color: #29b6f6;
  padding: 1rem 1rem 1rem 1rem;
  border-radius: 15px;
  border: none;
  font-family: Chibold;
  color: white;
  font-size: 2em;
}

.button2 {
  display: none;
}

.rubber-duck > img {
  width: 35rem;
}

.features {
  display: flex;
  justify-content: space-around;
  padding-top: 10rem;
  padding-bottom: 10rem;
}

.features > div > h2 {
  text-align: center;
  color: #707070;
  font-family: Chibold;
  font-size: 2.5rem;
  padding-bottom: 3rem;
}

.features > div > p {
  text-align: center;
  font-size: 1.25rem;
}

.about {
  background-color: #29b6f6;
  padding: 8rem;
}

.about > h2 {
  font-family: Chibold;
  font-size: 4rem;
  color: white;
  padding-bottom: 2rem;
}

.flex-container {
  display: flex;
  justify-content: center;
}

.about > div > img {
  padding-right: 6rem;
  width: 150rem;
}

.about > .flex-container > div > h3 {
  font-family: Chibold;
  color: white;
  font-size: 2.5rem;
  padding-bottom: 1rem;
}

.about > .flex-container > div > p {
  color: white;
  font-size: 1.45rem;
  width: 90%;
}

@media screen and (max-width: 480px) {
  nav > a > img {
    display: none;
  }
  nav > a > p {
    font-size: 1.5rem;
    align-items: center;
    justify-content: space-around;
    padding: none;
  }
  .hero {
    flex-direction: column;
    height: 80vh;
  }

  .hero-text {
    font-size: 25px;
  }

  .bigger-text {
    font-size: 50px;
  }

  .button {
    display: none;
  }

  .button2 {
    display: block;
    padding: 0.5rem 3rem 0.5rem 3rem;
  }

  .rubber-duck > img {
    width: 15rem;
  }

  .features {
    flex-direction: column;
    background-color: #29b6f6;
    color: white;
  }

  .features > div {
    padding-bottom: 2rem;
  }

  .features > div > h2 {
    color: white;
  }

  .about {
    padding: 1rem;
    width: 100%;
  }

  .about > h2 {
    display: none;
  }

  .flex-container {
    flex-direction: column;
    align-items: center;
  }

  .about > div > img {
    width: 25rem;
    padding: 2rem;
    padding-top: 0;
  }

  .about > .flex-container > div {
    padding: 0rem;
  }

  .about > .flex-container > div > h3 {
    font-size: 2rem;
  }

  .about > .flex-container > div > p {
    width: 100%;
    font-size: 1.25rem;
  }
}

